# darc2json

./: .clang-format  LICENSE  README.md  bits.c  configure.ac  darcdec.pl  env.c  envelope.c  fskde-filters.pl  meson.build  rec.sh
.github/workflows/: linux.yml
src/: Makefile  Makefile.am  Makefile.in  common.h  darc2json.cc  darcdec  darcdec.cc  input.cc  input.h  layer1.cc  layer1.h  layer2.cc  layer2.h  layer3.cc  layer3.h  layer3_4.cc  layer3_4.h  liquid_wrappers.cc  liquid_wrappers.h  util.cc  util.h
src/.deps/: darcdec-darcdec.Po  darcdec-input.Po  darcdec-layer1.Po  darcdec-layer2.Po  darcdec-liquid_wrappers.Po  darcdec-subcarrier.Po
